@@ -18,6 +18,7 @@ Code contributors
 * Ryan Walklin (ryanwalklin@gmail.com), for Mac OS X build.
 * Peter Somlo (peter.somlo@gmail.com), for ClearCanvas support.
 * 12maksqwe@gmail.com, for fixing issue #8.
+* Julien Nabet, for various suggestions for improving the source code.
 
 
 Artwork
